--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "tailwindcss-skip-link": "^1.0.1",
+    "tailwindcss-spaced-items": "^0.1.0",
     "tailwindcss-visuallyhidden": "^1.0.1",
+    "tailwindcss-vuejs": "^1.1.2",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
