Extract btn component

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "tailwindcss": "^0.7.3",
     "tailwindcss-spaced-items": "^0.1.0",
     "vue": "^2.5.17",
