--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
+    "postcss-nested": "^4.1.2",
     "tailwindcss": "^0.7.3",
     "tailwindcss-spaced-items": "^0.1.0",
     "vue": "^2.5.17",
@@ -41,6 +40,7 @@
   },
   "postcss": {
     "plugins": {
+      "postcss-nested": {},
       "tailwindcss": "./tailwind.js",
       "autoprefixer": {}
     }
