--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "postcss-nested": "^4.1.2",
-    "tailwindcss": "^0.7.3",
+    "tailwindcss": "https://github.com/tailwindcss/tailwindcss.git#next",
     "tailwindcss-spaced-items": "^0.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2"
@@ -41,7 +41,7 @@
   "postcss": {
     "plugins": {
       "postcss-nested": {},
-      "tailwindcss": "./tailwind.js",
+      "tailwindcss": "./tailwind.config.js",
       "autoprefixer": {}
     }
   },
