--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest": "^24.7.1",
+    "postcss-import": "^12.0.1",
     "vue-template-compiler": "^2.5.21"
   }
 }
