--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "postcss-nested": "^4.1.2",
+    "sugarss": "^2.0.0",
     "tailwindcss": "^1.0.1",
     "tailwindcss-spaced-items": "^0.1.0",
     "tailwindcss-visuallyhidden": "^1.0.2",
